Changelog
=========

0.22.2 (2017-12-27)
~~~~~~~~~~~~~~~~~~~
 * Added support for Django 2.0
  * https://github.com/alex/django-taggit/pull/509
 * **Backwards incompatible:** Dropped support for EOL Python 3.3
  * https://github.com/alex/django-taggit/pull/512

0.22.1 (2017-04-22)
~~~~~~~~~~~~~~~~~~~
 * Update spanish translation
  * https://github.com/alex/django-taggit/pull/473
 * Add testing for Django 1.11 and Python 3.6
  * https://github.com/alex/django-taggit/pull/475
 * introduce isort and flake8 in the CI
  * https://github.com/alex/django-taggit/pull/476
 * [docs] Fixed links to external apps
  * https://github.com/alex/django-taggit/pull/481
 * Improved auto-slug in TagBase to support UUID pk
  * https://github.com/alex/django-taggit/pull/482
 * [docs] Added contribution guidelines
  * https://github.com/alex/django-taggit/pull/480

0.22.0 (2017-01-29)
~~~~~~~~~~~~~~~~~~~
 * **Backwards incompatible:** Drop support for Django 1.7
  * https://github.com/alex/django-taggit/pull/465

0.21.6 (2017-01-25)
~~~~~~~~~~~~~~~~~~~
 * Fix case-insensitive tag creation when setting to a mix of new and existing tags are used
  * https://github.com/alex/django-taggit/pull/464

0.21.5 (2017-01-21)
~~~~~~~~~~~~~~~~~~~
 * Check for case-insensitive duplicates when creating new tags
  * https://github.com/alex/django-taggit/pull/461

0.21.4 (2017-01-10)
~~~~~~~~~~~~~~~~~~~
 * Support __gt__ and __lt__ ordering on Tags
  * https://github.com/alex/django-taggit/pull/456

0.21.3 (2016-10-07)
~~~~~~~~~~~~~~~~~~~
 * Fix list view
  * https://github.com/alex/django-taggit/pull/444

0.21.2 (2016-08-31)
~~~~~~~~~~~~~~~~~~~
 * Update Python version classifiers in setup.py
  * https://github.com/alex/django-taggit/pull/438
 * Add Greek translation
  * https://github.com/alex/django-taggit/pull/439

0.21.1 (2016-08-25)
~~~~~~~~~~~~~~~~~~~
 * Document supported versions of Django; fix Travis to test these versions.
  * https://github.com/alex/django-taggit/pull/435
