@@ -5,24 +5,6 @@ matrix:
   fast_finish: true
   include:
     - python: 2.7
-      env: TOXENV=py27-1.8.x
-    - python: 3.4
-      env: TOXENV=py34-1.8.x
-    - python: 3.5
-      env: TOXENV=py35-1.8.x
-    - python: 2.7
-      env: TOXENV=py27-1.9.x
-    - python: 3.4
-      env: TOXENV=py34-1.9.x
-    - python: 3.5
-      env: TOXENV=py35-1.9.x
-    - python: 2.7
-      env: TOXENV=py27-1.10.x
-    - python: 3.4
-      env: TOXENV=py34-1.10.x
-    - python: 3.5
-      env: TOXENV=py35-1.10.x
-    - python: 2.7
       env: TOXENV=py27-1.11.x
     - python: 3.4
       env: TOXENV=py34-1.11.x
