@@ -2,7 +2,6 @@
 
 develop:
 	pip install -q -r requirements/test.txt
-	pip install -q -e .
 
 test:
 	DJANGO_SETTINGS_MODULE=tests.settings py.test tests/tests.py --cov=taggit
